Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-bad
gst-plugins-bad
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,015
    • Issues 1,015
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 199
    • Merge Requests 199
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #101

Closed
Open
Opened Jul 14, 2013 by Bugzilla Migration User@bugzilla-migration

h264parse: splits frame with two fields

Submitted by Matej @Knopp

Link to original bug (#704214)

Description

The video contains interlaced frames, however when parsing h264parse doesn't keep the fields together, which breaks decoding, timestamps, etc.

One reason might be that there is AU delimiter, SEI and PPS between the fields, but when I tried make parser ignore those it still didn't split the frames right.

Maybe someone with better H264 knowledge can fix this? File can be found here:

https://s3.amazonaws.com/MatejK/Samples/00046.MTS

See also

  • Bug 696770
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-plugins-bad#101