h264parse: Revert some Xilinx specific changes

This patch patially reverts:

commit a4733e6cc771a53e5a86e48f33d5d06f68992e94
Author: George Kiagiadakis <george.kiagiadakis@collabora.com>
Date:   Fri Mar 15 16:31:40 2019 +0200

    h264parse: treat the PREFIX_UNIT as an incomplete NAL

commit e2fd34347761d53f0a4b0fa874dd939e203c3395
Author: Dylan Yip <dylan.yip@xilinx.com>
Date:   Mon Sep 28 17:47:47 2020 -0700

    h264parse: Account for zero byte in prefix NALs

We keep the following change:

@@ -1172,7 +1173,7 @@ gst_h264_parse_collect_nal (GstH264Parse * h264parse, GstH264NalUnit * nalu)
    * (where spec-wise would fail) */
   complete = h264parse->picture_start && ((nal_type >= GST_H264_NAL_SEI &&
           nal_type <= GST_H264_NAL_AU_DELIMITER) ||
-      (nal_type >= 14 && nal_type <= 18));
+      (nal_type >= 15 && nal_type <= 18));

Which is enough to "treat the PREFIX_UNIT as an incomplete NAL" as initially
intended in George patch. The remaining change is innaprioriate for upstream
since the appropriate solution consist of creating a NAL backlog and visiting
the backlog bacward (following the spec) to sort out which NAL goes in the
start of this new NAL and which one should be part of the previous NAL.

Relates to https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/-/issues/101

Upstream Status: Invalid [Xilinx Specific]
Signed-off-by: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Signed-off-by: Parth Gajjar <parth.gajjar@xilinx.com>

Acked-for-series: Varunkumar Allagadapa <varunkumar.allagadapa@amd.com>